<resources>
    <string name="app_name">Appuntes</string>
    <string name="app_bar_materias">Subjects</string>
    <string name="submit">Create</string>
    <string name="crear_materia">Create subject</string>
    <string name="guardar">Save</string>
    <string name="item1">Public notes</string>
    <string name="buscar">Search</string>
    <string name="buscar_materia">Search subject</string>
    <string name="creditos">credits</string>
    <string name="profesor">Teacher</string>
    <string name="buscar_materia_autocomplete">Search subject…</string>
    <string name="mensaje_campo_requerido">A required field is missing</string>
    <string name="mensaje_crear_materia_exito">Subject has been created</string>
    <string name="mensaje_crear_materia_error">Subject was not created</string>
    <string name="mensaje_editar_materia_exito">Subject has been updated</string>
    <string name="mensaje_editar_materia_error">Subject was not updated</string>
    <string name="mensaje_eliminar_materia_exito">Subject has been removed</string>
    <string name="dialog_confim_delete_materia">Are you sure to delete this subject? If you delete it, all associated notes will be deleted.</string>
    <string name="dialog_confim_delete_grupo_apunte">Are you sure to delete this group of notes? If you delete it, all associated notes will be deleted.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editar">Edit</string>
    <string name="mensaje_guardar_apunte_exito">the note was saved</string>
    <string name="mensaje_guardar_apunte_error">the note wasn\'t saved</string>
    <string name="titulo_apuntes">Notes</string>
    <string name="mensaje_crear_grupo_exito">The group has been created</string>
    <string name="mensaje_crear_grupo_error">The group has not been created</string>
    <string name="nombre_grupo_apunte">Group name notes</string>
    <string name="escribir_apunte">Type in…</string>
    <string name="share">share</string>
    <string name="publish">publish</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="contrase_a">Password</string>
    <string name="iniciar_sesi_n">Sing in</string>
    <string name="cerrar_sesi_n">Log out</string>
    <string name="usuario">User</string>
</resources>