<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/materias_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textViewTitleCrearMateria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/crear_materia"
                    android:textColor="#000000"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteMateriasUniversidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1"
                    android:hint="@string/buscar_materia_autocomplete" />

                <EditText
                    android:id="@+id/editTextCreditos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/creditos"
                    android:inputType="number|numberSigned" />

                <EditText
                    android:id="@+id/editTextProfesor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/profesor"
                    android:inputType="textFilter" />

                <Button
                    android:id="@+id/buttonGuardar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/guardar" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>